tests/errors/func_03.py
from lpython import i32

def f(l: list[i32]):
    l[5] = 5
